# CRCpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  _c_r_c_8h.html  _c_r_c_8h.js  _c_r_c_8h_source.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  class_c_r_c-members.html  class_c_r_c.html  class_c_r_c.js  classes.html  dir_bfccd401955b95cf8c75461437045ac0.html  dir_bfccd401955b95cf8c75461437045ac0.js  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_vars.html  index.html  main.yml  menudata.js  navtreedata.js  navtreeindex0.js  struct_c_r_c_1_1_parameters-members.html  struct_c_r_c_1_1_parameters.html  struct_c_r_c_1_1_parameters.js  struct_c_r_c_1_1_table-members.html  struct_c_r_c_1_1_table.html  struct_c_r_c_1_1_table.js
.github/workflows/: documentation.yml  unit-test.yml
doxygen/: Doxyfile.dox
inc/: CRC.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js
test/prj/VS2015/: UnitTest.vcxproj  UnitTest.vcxproj.filters
test/prj/VS2017/: UnitTest.vcxproj
test/prj/VS2022/: UnitTest.sln  UnitTest.vcxproj
test/prj/gcc/: Makefile
test/src/: main.cpp
